--- a/allifmaalcommonapp/templates/allifmaalcommonapp/ui/forms/add-form.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/ui/forms/add-form.html
@@ -99,16 +99,16 @@
 
         {% block standard-tab-col-one %}
           <tr>
-            <td class="allif-fix-table-col-forms">Name</td>
-            <td>{{form.name}}</td>
+            <td class="allif-fix-table-col-forms"></td>
+            <td></td>
           </tr>
         
           {%endblock%}
         {% include 'allifmaalcommonapp/includes/forms/two-column-forms-table-column-two-section.html' %}
         {% block standard-tab-col-two %}
         <tr>
-          <td class="allif-fix-table-col-forms">Description</td>
-          <td>{{form.description}}</td>
+          <td class="allif-fix-table-col-forms"></td>
+          <td></td>
         </tr>
        
         {%endblock%}
