--- a/allifmaalcommonapp/templates/allifmaalcommonapp/creditnotes/add-credit-note-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/creditnotes/add-credit-note-details.html
@@ -1,298 +1,95 @@
-{% extends 'allifmaalcommonapp/base/uimainbase/allifmaaluibase.html'%}
-{% load humanize %}
-{% block title %}
-{{title}}
-{% endblock %}
-{% block style %}
-{%endblock%}
-{% block body %}
-<div class="allifmaal-main-container">
+{% extends 'allifmaalcommonapp/ui/forms/add-form.html'%}
+{% load allif_navigation_tags %}
 
-<!--start....main headere-->
-<div class="card-header">
+ {% block add-form-header-block %}
 
-<div class="row mt-12" ><!--start....header row-->
-
-<div class="col-md-12"><!--start....header column-->
-
-<div class="container-fluid amel-content-header">
+ 
 <div class="dropdown allifmaal-content-dropdown">
-  <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-  Actions
-  </a>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-    <div class="content-dropdown-menu">
-     
-          <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonAddCreditNoteItems' allifquery.id user_var glblslug %}">Add Item</a></li>
+    <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+    Actions
+    </a>
+    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+      <div class="content-dropdown-menu">
+      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonAddCreditNoteItems' allifquery.id user_var glblslug %}">Add Item</a></li>
           <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonPostCreditNote' allifquery.id user_var glblslug %}">Post Item</a></li>
           <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonPostedCreditNotes' user_var glblslug %}">Posted Credits</a></li>
-          <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonCreditNotePdf' allifquery.id user_var glblslug %}">Download</a></li>
+          
           <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonApproveCreditNote' allifquery.id user_var glblslug %}">Approve CN</a></li>
     
 
-          
-          <li><a class="dropdown-item body-delete-link" href="{% url 'allifmaalcommonapp:commonWantToDeleteCreditNote' allifquery.id user_var glblslug %}">Delete Item</a></li>
-          
-   </div>
-  </ul>
-</div>
-<a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-
-<a href="{% url 'allifmaalcommonapp:commonCreditNotes' user_var glblslug %}">Credit Notes</a>
-
-
-</div>
-
-    </div><!--end....header column-->
-  
-  </div><!--end....header row-->
-
-</div><!--end....main headere-->
-
-  <div class="allifmaincontainer">
-<div class="row mt-12"> <!--start....table row-->
-  
-  {% if messages %}
-  <div class="delete-confirmation-header">
-    {% include 'allifmaalcommonapp/base/error/common_errors.html' %}
-  </div>
-  {% else %}
-
-<div class="table-details-content-description">{{allifquery}} Details</div>
-
-  {% endif %}
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="allif-info-tables">
-      <div class="row"><!--start of row div --->
-  <!--start of column two-->
-  <div class="col-md-4">
-    
-      <!--start of the table here-->
-      <div class="table-responsive">
-      <table class="table table-layout">
-      <tbody>
-    
-        <tr>
-          <td class="allif-fix-table-col">Company</td>
-          <td>{{allifquery.company}}</td>
-          </tr>
-      <tr>
-        <td class="allif-fix-table-col">Division</td>
-        <td>{{allifquery.division}}</td>
-        </tr>
-      <tr>
-        <td class="allif-fix-table-col">Branch</td>
-        <td>{{allifquery.branch}}</td>
-        </tr>
-        <tr>
-          <td class="allif-fix-table-col">Department</td>
-          <td>{{allifquery.department}}</td>
-          </tr>
-            
-          
-           
-        </tbody>
-        </table>
-      </div>
-        </div>
-           
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-       <!--start of the table here-->
-       <div class="allif-details-card table-responsive">
-       <table class="table table-layout">
-        <tbody>
-        <tr>
-            <td class="allif-fix-table-col">Number</td>
-            <td>{{allifquery.number}}</td>
-            </tr>
-     
-          <tr>
-            <td class="allif-fix-table-col">Customer</td>
-            <td>{{allifquery.customer}}</td>
-            </tr>
-            <tr>
-                <td class="allif-fix-table-col">Grand Total</td>
-                <td>{{allifquery.total_amount|floatformat:2|intcomma}}</td>
-                </tr>
-                        
-          </tbody>
-          </table>
-          </div>
-          </div>
-    
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-            
-        <tr>
-        <td class="allif-fix-table-col">Created By</td>
-        <td>{{allifquery.owner}}</td>
-        </tr>
-
-          <tr>
-            <td class="allif-fix-table-col">Date</td>
-            <td>{{allifquery.date|date:'d/m/Y'}}</td>
-            </tr>
-          
-            <tr>
-              <td class="allif-fix-table-col">Comments</td>
-              <td>{{allifquery.comments}}</td>
-          
-          </tr> 
-          <tr>
-            <td class="allif-fix-table-col">Reasons</td>
-            <td>{{allifquery.reasons}}</td>
-        
-        </tr> 
-
-     
-      
-          </tbody>
-          </table>
-  </div>
     </div>
-    </div><!--end of row div --->
-      
-        </div>
-
-</div><!--end....table row-->
-</div>
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
-
-<hr>
-
-<div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">Add/Edit Credit Note Details</div>
-  <form method='POST' action=''>{% csrf_token %}
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="allif-info-tables">
-      <div class="row"><!--start of row div --->
-  <!--start of column two-->
-  <div class="col-md-4">
-    
-      <!--start of the table here-->
-      <div class="table-responsive">
-      <table class="table table-layout">
-      <tbody>
-
-      <tr>
-        <td class="allif-fix-table-col">Division</td>
-        <td>{{form.division}}</td>
-    
-        </tr>
-        
-        <tr>
-          <td class="allif-fix-table-col">Branch</td>
-          <td>{{form.branch}}</td>
-      
-          </tr>
-          <tr>
-            <td class="allif-fix-table-col">Department</td>
-            <td>{{form.department}}</td>
-        
-            </tr>
-          <tr>
-            <td class="allif-fix-table-col">Customer</td>
-            <td>{{form.customer}}</td>
-        
-            </tr>
-          
-            
-                
-        </tbody>
-        </table>
-      </div>
-        </div>
-           
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-       <!--start of the table here-->
-       <div class="allif-details-card table-responsive">
-       <table class="table table-layout">
-        <tbody>
-          <tr>
-                <td class="allif-fix-table-col">Original Invoice</td>
-                <td>{{form.original_invoice}}</td>
-            
-                </tr>
-                <tr>
-                <td class="allif-fix-table-col">Return Location</td>
-                <td>{{form.return_location}}</td>
-            
-                </tr>
-          <tr>
-            <td class="allif-fix-table-col">Total Amount</td>
-            <td>{{form.total_amount}}</td>
-        
-            </tr>
-         
-        
-          </tbody>
-          </table>
-          </div>
-          </div>
-    
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-         
-                 <tr>
-                <td class="allif-fix-table-col">Reasons</td>
-                <td>{{form.reasons}}</td>
-            
-                </tr>
-                <tr>
-                <td class="allif-fix-table-col">Approval Status</td>
-                <td>{{form.approval_status}}</td>
-            
-                </tr>
-                
-              <tr>
-                <td class="allif-fix-table-col">Status</td>
-                <td>{{form.status}}</td>
-            
-                </tr>
-            <tr>
-              <td class="allif-fix-table-col">Action</td>
-              <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
-          
-              </tr>
-          </tbody>
-          </table>
+    </ul>
   </div>
-    </div>
-    </div><!--end of row div --->
-      
-        </div>
+ <a href="{% allif_get_single_nav_link_url 'CreditNotes' user_var glblslug %}">Credit Notes</a>
+ <a href="{{ allif_contextual_action_links.AddCNDetails.url }}">Refresh</a>
+<a href="{{ allif_contextual_action_links.PostCreditNote.url }}">Post CN</a>
 
-</div><!--end....table row-->
-</div>
-</form>
-<!--end of table-->
+<a href="{{ allif_contextual_action_links.CreditNotePdf.url }}">Download Pdf</a>
 
-</div><!--end of main container of the page....-->
+{% endblock %}
 
-<hr>
+   {% block core-tab-col-one %}
+    <tr>
+      <td class="allif-fix-table-col-forms">Name</td>
+      <td>{{form.name}}</td>
+    </tr>
+     <tr>
+        <td class="allif-fix-table-col-forms">Description</td>
+        <td>{{form.description}}</td>
+      </tr>
+    
+     <tr>
+      <td class="allif-fix-table-col-forms">Invoice</td>
+      <td>{{form.original_invoice}}</td>
+    </tr>
+     
+    {%endblock%}
 
-</div>
-</div>
-  {% block scripts %}
+    {% block core-tab-col-two %}
+     <tr>
+      <td class="allif-fix-table-col-forms">Customer</td>
+      <td>{{form.customer}}</td>
+    </tr>
+   
+     <tr>
+      <td class="allif-fix-table-col-forms">Amount</td>
+      <td>{{form.total_amount}}</td>
+    </tr>
+ 
+      <tr>
+      <td class="allif-fix-table-col-forms">Return Reasons</td>
+      <td>{{form.reasons}}</td>
+    </tr>
+    {%endblock%}
 
+     {% block standard-tab-col-one %}
+    
+    <tr>
+      <td class="allif-fix-table-col-forms">Approval Status</td>
+      <td>{{form.approval_status}}</td>
+    </tr>
+  
+    {%endblock%}
+       
+   {% block standard-tab-col-two %}
+    <tr>
+      <td class="allif-fix-table-col-forms">Return Location</td>
+      <td>{{form.return_location}}</td>
+    </tr>
+    {%endblock%}
+
+
+  {% block allif_sensitive_section_col_one %}
+    <tr>
+      <td class="allif-fix-table-col"> {{allifquery}}</td>
+      <td><a class="amel-table-list-identifier" href="{% allif_get_single_nav_link_url 'CreditNotes' user_var glblslug %}">Go Back</a></td>
+    </tr>
   {% endblock %}
-   {% endblock %}
-  
+  {% block allif_sensitive_section_col_two %}
+    <tr>
+      <td class="allif-fix-table-col">Delet {{allifquery}}</td>
+      <td><a class="amel-table-list-identifier body-delete-link" href="{{ allif_contextual_action_links.DeleteCreditNoteConfirm.url }}">Delete {{allifquery}}</a></td>
+    </tr>
+    
+    {% endblock %}
+
