--- a/allifmaalcommonapp/templates/allifmaalcommonapp/ledgerentries/ledger-entry-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/ledgerentries/ledger-entry-details.html
@@ -1,160 +1,79 @@
-{% extends 'allifmaalcommonapp/base/uimainbase/allifmaaluibase.html'%}
-{% load humanize %}
-{% block title %}
-{{title}}
-{% endblock %}
-{% block style %}
-{%endblock%}
-{% block body %}
-<div class="allifmaal-main-container">
+  {% extends 'allifmaalcommonapp/ui/details/item-details.html'%}
+  {% load humanize %}
+  {% load allif_navigation_tags %}
+  {% block add-form-header-block %}
+ <a href="{% allif_get_single_nav_link_url 'LedgerEntries' user_var glblslug %}">Ledger Entries</a>
 
-<!--start....main headere-->
-<div class="card-header">
+  {%endblock%}
 
-<div class="row mt-12" ><!--start....header row-->
-
-<div class="col-md-12"><!--start....header column-->
-
-<div class="container-fluid amel-content-header">
-
-<a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-
-<a href="{% url 'allifmaalcommonapp:commonLedgerEntries' user_var glblslug %}">Ledger Entries</a>
-
-
-</div>
-
-    </div><!--end....header column-->
+  {% block details-table-col-one %}
   
-  </div><!--end....header row-->
-
-</div><!--end....main headere-->
-
-  <div class="allifmaincontainer">
-<div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">Ledger Entry Details</div>
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="allif-info-tables">
-      <div class="row"><!--start of row div --->
-  <!--start of column two-->
-  <div class="col-md-4">
+      <tr>
+      <td class="allif-fix-table-col">Ledger Owner</td>
+      <td>{{allifquery.ledgowner}}</td>
+    </tr>
     
-      <!--start of the table here-->
-      <div class="table-responsive">
-      <table class="table table-layout">
-      <tbody>
+  
+  {%endblock%}
 
-        <tr>
-          <td class="allif-fix-table-col">Supplier</td>
-          <td>{{allifquery.supplier}}</td>
-          </tr>
+  {% block details-table-col-two %}
+   <tr>
+    <td class="allif-fix-table-col">Description</td>
+    <td>{{allifquery.comments}}</td>
+  </tr>
+ 
+ 
+  
+ 
+  {% endblock %}
+  
+  {% block core-details-tab-col-one %}
+  <tr>
+    <td class="allif-fix-table-col">Balance</td>
+    <td>{{allifquery.balance|floatformat:2|intcomma}}</td>
+  </tr>
+   <tr>
+    <td class="allif-fix-table-col">Credit</td>
+    <td>{{allifquery.credit|floatformat:2|intcomma}}</td>
+  </tr>
+ 
 
-          <tr>
-            <td class="allif-fix-table-col">Customer</td>
-            <td>{{allifquery.customer}}</td>
-            </tr>
-          
-            <tr>
-              <td class="allif-fix-table-col">Staff</td>
-              <td>{{allifquery.staff}}</td>
-              </tr>
-              <tr>
-                <td class="allif-fix-table-col">Supplier</td>
-                <td>{{allifquery.supplier}}</td>
-                </tr>
-        </tbody>
-        </table>
-      </div>
-        </div>
-           
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-       <!--start of the table here-->
-       <div class="allif-details-card table-responsive">
-       <table class="table table-layout">
-        <tbody>
+  {%endblock%}
 
-        
-              <tr>
-                <td class="allif-fix-table-col">Balance</td>
-                <td>{{allifquery.balance|floatformat:2|intcomma}}</td>
-                </tr>
-
-                <tr>
-                  <td class="allif-fix-table-col">Credit</td>
-                  <td>{{allifquery.credit|floatformat:2|intcomma}}</td>
-                  </tr>
-
-                  <tr>
-                    <td class="allif-fix-table-col">Debit</td>
-                    <td>{{allifquery.debit|floatformat:2|intcomma}}</td>
-                    </tr>
-
-                    <tr>
-                      <td class="allif-fix-table-col">Original Amount</td>
-                      <td>{{allifquery.originalamount|floatformat:2|intcomma}}</td>
-                      </tr>
-
-                      <tr>
-                        <td class="allif-fix-table-col">New Amount</td>
-                        <td>{{allifquery.newamount|floatformat:2|intcomma}}</td>
-                        </tr>
-
-          </tbody>
-          </table>
-          </div>
-          </div>
-    
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-        
-          <tr>
-            <td class="allif-fix-table-col">Owner</td>
-            <td>{{allifquery.ledgowner}}</td>
-            </tr>
-           
-<tr>
-  <td class="allif-fix-table-col">Created By</td>
-  <td>{{allifquery.owner}}</td>
+  {% block core-details-tab-col-two %}
+  <tr>
+    <td class="allif-fix-table-col">Debit</td>
+    <td>{{allifquery.debit|floatformat:2|intcomma}}</td>
+  </tr>
+   <tr>
+    <td class="allif-fix-table-col">New Amount</td>
+    <td>{{allifquery.newamount|floatformat:2|intcomma}}</td>
   </tr>
 
-          <tr>
-            <td class="allif-fix-table-col">Date</td>
-            <td>{{allifquery.date|date:'d/m/Y'}}</td>
-            </tr>
-          
-            <tr>
-              <td class="allif-fix-table-col">Comments</td>
-              <td>{{allifquery.comments}}</td>
-          
-          </tr> 
-          </tbody>
-          </table>
-  </div>
-    </div>
-    </div><!--end of row div --->
-      
-        </div>
-
-</div><!--end....table row-->
-</div>
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
-
-<hr>
-
-</div>
-</div>
-  {% block scripts %}
-
   {% endblock %}
-   {% endblock %}
-   
+
+  {% block allif_sensitive_section_col_one %}
+    <tr>
+      <td class="allif-fix-table-col">{{allifquery}}</td>
+      <td><a class="amel-table-list-identifier" href="{% allif_get_single_nav_link_url 'LedgerEntries' user_var glblslug %}">Go Back</a></td>
+    </tr>
+ 
+    
+  {%endblock%}
+
+  {% block general-details-tab-col-two %}
+  <tr>
+    <td class="allif-fix-table-col">Description</td>
+    <td>{{allifquery.description}}</td>
+  </tr>
+  {% endblock %}
+  
+  {% block allif_sensitive_section_col_two %}
+  <tr>
+    <td class="allif-fix-table-col">Delet {{allifquery}}</td>
+    <td><a class="amel-table-list-identifier body-delete-link" href="{{ allif_contextual_action_links.DeleteLedgerEntryConfirm.url }}">Delete {{allifquery}}</a></td>
+  </tr>
+  {%endblock%}
+
+  {% block item_details_related_items_full_table %} {%endblock%}
+  {% block item_details_related_items_full_half_tables %}{%endblock%}
