--- a/allifmaalcommonapp/templates/allifmaalcommonapp/suppliers/supplier-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/suppliers/supplier-details.html
@@ -4,6 +4,9 @@
   {% block add-form-header-block %}
  <a href="{% allif_get_single_nav_link_url 'Suppliers' user_var glblslug %}">Suppliers</a>
 <a href="{% allif_get_single_nav_link_url 'AddSupplier' user_var glblslug %}">Add New Supplier</a>
+
+ <a href="{{ allif_contextual_action_links.SupplierLedgerEntries.url }}">Ledger Entries</a>
+ 
   {%endblock%}
 
   {% block details-table-col-one %}
