--- a/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/profiles/profile-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/profiles/profile-details.html
@@ -25,10 +25,10 @@
   <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
     <div class="content-dropdown-menu">
       
-    <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonEditStaffProfile' allifqueryset.id user_var glblslug %}">Edit Profile</a></li>
+    <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonEditStaffProfile' allifquery.id user_var glblslug %}">Edit Profile</a></li>
 
     
-    <li><a class="dropdown-item body-delete-link" href="{% url 'allifmaalcommonapp:commonWantToDeleteProfile' allifqueryset.id user_var glblslug %}">Delete Profile</a></li>
+    <li><a class="dropdown-item body-delete-link" href="{% url 'allifmaalcommonapp:commonWantToDeleteProfile' allifquery.id user_var glblslug %}">Delete Profile</a></li>
 
 
    </div>
