--- a/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/salaries/salary-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/salaries/salary-details.html
@@ -1,170 +1,83 @@
-{% extends 'allifmaalcommonapp/base/uimainbase/allifmaaluibase.html'%}
-{% load humanize %}
-{% block title %}
-{{title}}
-{% endblock %}
-{% block style %}
-{%endblock%}
-{% block body %}
-<div class="allifmaal-main-container">
+  {% extends 'allifmaalcommonapp/ui/details/item-details.html'%}
+  {% load humanize %}
+  {% load allif_navigation_tags %}
+  {% block add-form-header-block %}
+<a href="{% allif_get_single_nav_link_url 'Salaries' user_var glblslug %}">Salaries</a>
+ <a href="{{ allif_contextual_action_links.PostSalary.url }}">Post Salary</a>
+  {%endblock%}
 
-<!--start....main headere-->
-<div class="card-header">
-
-<div class="row mt-12" ><!--start....header row-->
-
-<div class="col-md-12"><!--start....header column-->
-
-<div class="container-fluid amel-content-header">
-<div class="dropdown allifmaal-content-dropdown">
-  <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-  Actions
-  </a>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-    <div class="content-dropdown-menu">
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonEditSalaryDetails' allifquery.id user_var glblslug %}">Edit Details</a></li>
-         
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonPostSalary' allifquery.id user_var glblslug %}">Post Payment</a></li>
-
-      <li><a class="dropdown-item body-delete-link" href="{% url 'allifmaalcommonapp:commonWantToDeleteSalary' allifquery.id user_var glblslug %}">Delete Item</a></li>
- 
-   </div>
-  </ul>
-</div>
-<a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-
-<a href="{% url 'allifmaalcommonapp:commonExpenses' user_var glblslug %}">Expenses</a>
-
-
-</div>
-
-    </div><!--end....header column-->
-  
-  </div><!--end....header row-->
-
-</div><!--end....main headere-->
-
-  <div class="allifmaincontainer">
-<div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">{{allifquery}} Salary Payment Details</div>
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="allif-info-tables">
-      <div class="row"><!--start of row div --->
-  <!--start of column two-->
-  <div class="col-md-4">
-    
-      <!--start of the table here-->
-      <div class="table-responsive">
-      <table class="table table-layout">
-      <tbody>
-        <tr>
-          <td class="allif-fix-table-col">Company</td>
-          <td>{{allifquery.company}}</td>
-          </tr>
+  {% block details-table-col-one %}
+    <tr>
+      <td class="allif-fix-table-col">Staff</td>
+      <td>{{allifquery.staff}}</td>
+    </tr>
       <tr>
-        <td class="allif-fix-table-col">Division</td>
-        <td>{{allifquery.division}}</td>
-        </tr>
-      <tr>
-        <td class="allif-fix-table-col">Branch</td>
-        <td>{{allifquery.branch}}</td>
-        </tr>
-     
-      
-            <tr>
-              <td class="allif-fix-table-col">Department</td>
-              <td>{{allifquery.department}}</td>
-              </tr>
-        </tbody>
-        </table>
-      </div>
-        </div>
-           
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-       <!--start of the table here-->
-       <div class="allif-details-card table-responsive">
-       <table class="table table-layout">
-        <tbody>
-
-      <tr>
-        <td class="allif-fix-table-col">Staff</td>
-        <td>{{allifquery.staff}}</td>
-        </tr>
-        <tr>
-          <td class="allif-fix-table-col">Description</td>
-          <td>{{allifquery.description}}</td>
-          </tr>
-      <tr>
-        <td class="allif-fix-table-col">Amount</td>
-        <td>{{allifquery.amount|floatformat:2|intcomma}}</td>
-        </tr>
-
-        <tr>
-          <td class="allif-fix-table-col">Pay from Account</td>
-          <td>{{allifquery.account}}</td>
-          </tr>
-       
-          </tbody>
-          </table>
-          </div>
-          </div>
-    
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-        
-              <tr>
-                <td class="allif-fix-table-col">Posting Status</td>
-                <td>{{allifquery.status}}</td>
-                </tr>
-
-<tr>
-  <td class="allif-fix-table-col">Created By</td>
-  <td>{{allifquery.owner}}</td>
+    <td class="allif-fix-table-col">Description</td>
+    <td>{{allifquery.description}}</td>
   </tr>
-
-          <tr>
-            <td class="allif-fix-table-col">Date</td>
-            <td>{{allifquery.date|date:'d/m/Y'}}</td>
-            </tr>
-          
-            <tr>
-              <td class="allif-fix-table-col">Comments</td>
-              <td>{{allifquery.comments}}</td>
-          
-          </tr> 
-          <tr>
-            <td class="allif-fix-table-col">Terms</td>
-            <td>{{allifquery.mode}}</td>
-        
-        </tr> 
-          </tbody>
-          </table>
-  </div>
-    </div>
-    </div><!--end of row div --->
-      
-        </div>
-
-</div><!--end....table row-->
-</div>
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
-
-<hr>
-
-</div>
-</div>
-  {% block scripts %}
-
-  {% endblock %}
-   {% endblock %}
    
+  {%endblock%}
+
+  {% block details-table-col-two %}
+ 
+ 
+   <tr>
+    <td class="allif-fix-table-col">Value</td>
+    <td>{{allifquery.amount|floatformat:2|intcomma}}</td>
+  </tr>
+   <tr>
+    <td class="allif-fix-table-col">Account</td>
+    <td>{{allifquery.account}}</td>
+  </tr>
+  {% endblock %}
+  
+  {% block core-details-tab-col-one %}
+  <tr>
+    <td class="allif-fix-table-col">Mode</td>
+    <td>{{allifquery.mode}}</td>
+  </tr>
+   <tr>
+    <td class="allif-fix-table-col">Payable Salary</td>
+    <td>{{allifquery.salary_payable}}</td>
+  </tr>
+  
+  {%endblock%}
+
+  {% block core-details-tab-col-two %}
+ <tr>
+    <td class="allif-fix-table-col">Payable Salary</td>
+    <td>{{allifquery.salary_payable}}</td>
+  </tr>
+  {% endblock %}
+
+  {% block allif_sensitive_section_col_one %}
+    <tr>
+      <td class="allif-fix-table-col">{{allifquery}}</td>
+      <td><a class="amel-table-list-identifier" href="{% allif_get_single_nav_link_url 'Salaries' user_var glblslug %}">Go Back</a></td>
+    </tr>
+ 
+  {%endblock%}
+
+  {% block general-details-tab-col-two %}
+  <tr>
+    <td class="allif-fix-table-col">Description</td>
+    <td>{{allifquery.description}}</td>
+  </tr>
+  {% endblock %}
+  
+  {% block allif_sensitive_section_col_two %}
+  <tr>
+    <td class="allif-fix-table-col">Delet {{allifquery}}</td>
+    <td><a class="amel-table-list-identifier body-delete-link" href="{{ allif_contextual_action_links.DeleteSalaryConfirm.url }}">Delete {{allifquery}}</a></td>
+  </tr>
+  {%endblock%}
+
+  {% block item_details_related_items_full_table %} {%endblock%}
+  {% block item_details_related_items_full_half_tables %}{%endblock%}
+
+
+
+
+
+
+
