--- a/allifmaalcommonapp/templates/allifmaalcommonapp/suppliers/suppliers.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/suppliers/suppliers.html
@@ -14,6 +14,7 @@
   {% block allif-header-links %}
   <a href="{% allif_get_single_nav_link_url 'Suppliers' user_var glblslug %}">Suppliers</a>
   <a href="{% allif_get_single_nav_link_url 'AddSupplier' user_var glblslug %}">Add New Supplier</a>
+  <a href="{% allif_get_single_nav_link_url 'SupplierPayments' user_var glblslug %}">Supplier Payments</a>
   {% endblock %}
   {% block upload-excel-file %}
   {%endblock%}
