--- a/allifmaalcommonapp/templates/allifmaalcommonapp/customers/customers.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/customers/customers.html
@@ -15,6 +15,7 @@
   <a href="{% allif_get_single_nav_link_url 'Clients' user_var glblslug %}">Customers</a>
   <a href="{% allif_get_single_nav_link_url 'AddClient' user_var glblslug %}">Add Client</a>
   <a href="{% allif_get_single_nav_link_url 'ReceiveClientPayment' user_var glblslug %}">Receipt Customer Payment</a>
+  <a href="{% allif_get_single_nav_link_url 'CustomerPayments' user_var glblslug %}">Customer Payments</a>
   
   {% endblock %}
   {% block upload-excel-file %}
