--- a/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/salaries/salaries.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/salaries/salaries.html
@@ -1,247 +1,45 @@
-{% extends 'allifmaalcommonapp/base/uimainbase/allifmaaluibase.html'%}
-{% load humanize %}
-{% block title %}
-{{title}}
-{% endblock %}
-{% block style %}
-{%endblock%}
-{% block body %}
-<div class="allifmaal-main-container">
-<!--start....main headere-->
-<div class="card-header">
+  {% extends 'allifmaalcommonapp/ui/tables/full/data-list.html'%}
+  {% load humanize %}
+  {% load allif_navigation_tags %}
+  {% block allif-basic-search-action %}
+    {% url 'allifmaalcommonapp:commonSalarySearch' user_var glblslug %}
+  {% endblock %}
+ 
+  {% block advanced-search-action %}
+    {% url 'allifmaalcommonapp:commonSalaryAdvanceSearch' user_var glblslug %}
+  {% endblock %}
+  {% block upload-excel-file-action %}
   
-  <div class="row mt-12" ><!--start....header row-->
-  
-  <div class="col-md-12"><!--start....header column-->
-  
-  <div class="container-fluid amel-content-header">
-    <div class="dropdown allifmaal-content-dropdown">
-      <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-      Open Filters
-      </a>
-      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-        <div class="content-dropdown-menu">
-  
-        <li><a class="dropdown-item">Looking for something?</a></li>
-        <a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonSalaries' user_var glblslug %}">Clear Search</a>
-        
-        <form method='POST' action="{% url 'allifmaalcommonapp:commonSalarySearch' user_var glblslug %}">{% csrf_token %}
-        
-          <input type="text" id="allifsearchcommonfield" name="allifsearchcommonfieldname" class="form-control allifsearchcommonfieldclasstwo"
-          placeholder="Type Here ...">
-        
-          <button type="submit" class="btn allifmaal-submit-btn">Submit</button>
-          </form>
-          <hr>
-          <li><a class="dropdown-item">Select Ordering Option</a></li>
-        <form method='POST' action="{% url 'allifmaalcommonapp:commonSalaries' user_var glblslug %}" enctype="multipart/form-data">{% csrf_token %}
-      
-        <div>
-        <select name="requiredformat" class="form-control">
-          {% for item in datasorts %}
-          <option>{{item.name}}</option>
-            
-           {% endfor %}
-           
-          </select>
-          </div>
-          <button type="submit" class="btn allifmaal-submit-btn">Submit</button>
-      
-      </form>
-      <hr>
-      <li><a class="dropdown-item">Advanced Searching</a></li>
-      <form method='POST' action="{% url 'allifmaalcommonapp:commonSalaryAdvanceSearch' user_var glblslug %}" enctype="multipart/form-data">{% csrf_token %}
-         
-        <div>
-          <label>Start Date</label>
-          <input type="date" class="form-control" name="startdate" placeholder="Starting Balance">
-        </div>
-        <div>
-          <label>End Date</label>
-          <input type="date" class="form-control" name="enddate" placeholder="Ending Balance">
-        </div>
-
-        <div>
-          <label>Start Value</label>
-          <input type="text" class="form-control" name="startvalue" placeholder="">
-        </div>
-        <div>
-          <label>End Value</label>
-          <input type="text" class="form-control" name="endvalue" placeholder="">
-        </div>
-        
-        
-        <div>
-          <label >Select Option</label>
-          <select name="requiredformat" class="form-control">
-            {% for item in formats %}
-            <option>{{item.name}}</option>
-            
-         {% endfor %}
-         
-        </select>
-        </div>
-  
-        
-        <button type="submit" class="btn allifmaal-submit-btn">Submit</button>
-    
-    </form>
-    <hr>
-      
-      </div>
-      </ul>
-    </div>
-
-    <a class="amel-table-list-identifier">Staff Salaries:</a>
-    <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-    <a href="{% url 'allifmaalcommonapp:commonhrm' user_var glblslug %}">HRM</a>
-    <a href="{% url 'allifmaalcommonapp:commonSalaries' user_var glblslug %}">Payroll</a>
-    <a href="{% url 'allifmaalcommonapp:commonAddSalary' user_var glblslug %}">New Salary</a>
-
-    
-    <a href="{% url 'allifmaalcommonapp:commonPostedSalaries' user_var glblslug %}">Posted Salaries</a>
-
-  </div>
-  
-      </div><!--end....header column-->
-    
-    </div><!--end....header row-->
-  
-  </div><!--end....main headere-->
-<div class="allifmaincontainer">
-    
-<div class="row mt-12"> <!--start....table row-->
-<div class="col-md-12"> <!--start....table column-->
-
-     
-  
-  <div class="allif-scroll-table">
-    <div class="table-responsive allif-full-table">
-    <table class="table table-layout">
-      <thead>
-        <tr class="allif-table-header-row">
-        <td class="allif-fix-table-col">First Name</td>
-       
-        <td>Last Name</td>
-        <td>Description</td>
-        <td>Amount</td>
-        <td>Date</td>
-        <td>Navigate</td>
-        
-        <td> . . . </td>
-        <td></td>
-        </tr>
-        </thead>
-        <tbody class="allif-table-body">
-         
-        
-        {% for item in allifqueryset %} 
-        <tr data-id="{{item.id}}">
-        <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonSalaryDetails' item.id user_var glblslug %}">{{item.staff}}</a></td>
-        
-          <td>
-          {{item.staff.lastName}}
-         </td>
-         <td>
-          {{item.description}}
-         </td>
-         <td>
-          {{item.amount|floatformat:2|intcomma}}
-         </td>
-         <td>
-          {{item.date|date:'d/m/Y'}}
-         </td>
-         
-         <td>
-          <div class="dropdown allifmaal-content-dropdown">
-            <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
-            <div class="dropdown-content">
-              <a href="{% url 'allifmaalcommonapp:commonEditSalaryDetails' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
-              <a href="{% url 'allifmaalcommonapp:commonPostSalary' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Post Item</a>
-             
-              <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
-              
-            </div>
-          </div>
-          <div class="dropdown allif-confirm-action">
-            
-            <a href="{% url 'allifmaalcommonapp:commonSalaries' user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
-            <a href="{% url 'allifmaalcommonapp:commonDeleteSalary' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
-          </div>
-
-         
-        </td>
-       <td> . . . </td>
-       <td></td>
-      
-  
-    </tr>
-    {% endfor %}
-    {% if searched_data %}
-    {% for item in searched_data %}
-    <tr data-id="{{item.id}}">
-      <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonSalaryDetails' item.id user_var glblslug %}">{{item.staff}}</a></td>
-      
-        <td>
-        {{item.staff.lastName}}
-       </td>
-       <td>
-        {{item.description}}
-       </td>
-       <td>
-        {{item.amount|floatformat:2|intcomma}}
-       </td>
-       <td>
-        {{item.date|date:'d/m/Y'}}
-       </td>
-       
-       <td>
-        <div class="dropdown allifmaal-content-dropdown">
-          <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
-          <div class="dropdown-content">
-            <a href="{% url 'allifmaalcommonapp:commonEditSalaryDetails' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
-            <a href="{% url 'allifmaalcommonapp:commonPostSalary' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Post Item</a>
-           
-            <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
-            
-          </div>
-        </div>
-        <div class="dropdown allif-confirm-action">
-          
-          <a href="{% url 'allifmaalcommonapp:commonSalaries' user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
-          <a href="{% url 'allifmaalcommonapp:commonDeleteSalary' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
-        </div>
-
-       
-      </td>
-     <td> . . . </td>
-     <td></td>
-    
-
-  </tr>
-    {% endfor %}
-      {%endif %}
-
-      </tbody>
-    </table>
-    </div>
-   </div>
-
-  
-  </div><!--end....table column-->
-  </div>
-
-</div><!--end....table row-->
-
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
-
-  {% block scripts %}
+  {% endblock %}
+  {% block allif-header-links %}
+  <a href="{% allif_get_single_nav_link_url 'Salaries' user_var glblslug %}">Salaries</a>
+  <a href="{% allif_get_single_nav_link_url 'AddSalary' user_var glblslug %}">Add Salary</a>
+  <a href="{% allif_get_single_nav_link_url 'PostedSalaries' user_var glblslug %}">Posted Salaries</a>
+   <a href="{% url 'allifmaalcommonapp:commonhrm' user_var glblslug %}">HRM</a>
  
   {% endblock %}
+  {% block upload-excel-file %}
+  {%endblock%}
+  {% block list-table-headers %}
+  <td class="allif-fix-table-col">First Name</td>
+  <td class="allif-table-header-td"> Last Name</td>
+  <td class="allif-table-header-td"> Description </td>
   
-   {% endblock %}
+  <td class="allif-table-header-td">Amount </td>
+  {% endblock %}
 
-   
+  {% block list-table-content-seciton %}
+  <td class="allif-fix-table-col">{% block list-table-content-seciton-links %}<a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonSalaryDetails' item.id user_var glblslug %}"> {{item.staff}} </a>{%endblock%}</td>
+  <td class="allif-table-content-td"> {{item.staff.lastName}}</td>
+  <td class="allif-table-content-td"> {{item.description}}</td>
+  <td class="allif-table-content-td"> {{item.amount|floatformat:2|intcomma}} </td>
+  
+  {% endblock %}
+  {% block list-table-content-seciton-dropdown-links %}
+  <a href="{% url 'allifmaalcommonapp:commonEditSalaryDetails' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Item Details</a>
+  
+  
+  {% endblock %}
+  
+
 
