--- a/allifmaalcommonapp/templates/allifmaalcommonapp/payments/customers/customer-payment-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/payments/customers/customer-payment-details.html
@@ -1,287 +1,53 @@
-{% extends 'allifmaalcommonapp/base/uimainbase/allifmaaluibase.html'%}
-{% load humanize %}
-{% block title %}
-{{title}}
-{% endblock %}
-{% block style %}
-{%endblock%}
-{% block body %}
-<div class="allifmaal-main-container">
+{% extends 'allifmaalcommonapp/ui/forms/add-form.html'%}
+{% load allif_navigation_tags %}
+ {% block add-form-header-block %}
+  <a href="{% allif_get_single_nav_link_url 'CustomerPayments' user_var glblslug %}">Customer Payments</a>
 
-<!--start....main headere-->
-<div class="card-header">
+<a href="{{ allif_contextual_action_links.PostCustomerPayment.url }}">Post Payment</a>
+<a href="{{ allif_contextual_action_links.CustomerPaymentDetails.url }}">Payment Details</a>
 
-<div class="row mt-12" ><!--start....header row-->
-
-<div class="col-md-12"><!--start....header column-->
-
-<div class="container-fluid amel-content-header">
-<div class="dropdown allifmaal-content-dropdown">
-  <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-  Actions
-  </a>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-    <div class="content-dropdown-menu">
-         
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonEditCustomerPayment' allifquery.id user_var glblslug %}">Edit Item</a></li>
-         
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonPostCustomerPayment' allifquery.id user_var glblslug %}">Post Payment</a></li>
-
-      <li><a class="dropdown-item body-delete-link" href="{% url 'allifmaalcommonapp:commonWantToDeleteCustomerPayment' allifquery.id user_var glblslug %}">Delete Item</a></li>
-      
-
-   </div>
-  </ul>
-</div>
-<a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-<a href="{% url 'allifmaalcommonapp:commonCustomerPayments' user_var glblslug %}">Customer Payments</a>
-<a href="{% url 'allifmaalcommonapp:commonQuotes' user_var glblslug %}">Quotations</a>
-
-
-</div>
-
-    </div><!--end....header column-->
-  
-  </div><!--end....header row-->
-
-</div><!--end....main headere-->
-
-  <div class="allifmaincontainer">
-<div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">Payment Details For {{allifquery}} </div>
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="allif-info-tables">
-      <div class="row"><!--start of row div --->
-  <!--start of column two-->
-  <div class="col-md-4">
-    
-      <!--start of the table here-->
-      <div class="table-responsive">
-      <table class="table table-layout">
-      <tbody>
-
-        <tr>
-          <td class="allif-fix-table-col">Company</td>
-          <td>{{allifquery.company}}</td>
-          </tr>
-      <tr>
-        <td class="allif-fix-table-col">Division</td>
-        <td>{{allifquery.division}}</td>
-        </tr>
-      <tr>
-        <td class="allif-fix-table-col">Branch</td>
-        <td>{{allifquery.branch}}</td>
-        </tr>
-        <tr>
-          <td class="allif-fix-table-col">Department</td>
-          <td>{{allifquery.department}}</td>
-          </tr>
-            
-          <tr>
-            <td class="allif-fix-table-col">Paid A/C</td>
-            <td>{{allifquery.account}}</td>
-            </tr>
-     
-        </tbody>
-        </table>
-      </div>
-        </div>
-           
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-       <!--start of the table here-->
-       <div class="allif-details-card table-responsive">
-       <table class="table table-layout">
-        <tbody>
-          <tr>
-            <td class="allif-fix-table-col">Customer</td>
-            <td>{{allifquery.customer}}</td>
-            </tr>
-            <tr>
-              <td class="allif-fix-table-col">Amount</td>
-              <td>{{allifquery.amount|floatformat:2|intcomma}}</td>
-              </tr>
-              <tr>
-                <td class="allif-fix-table-col">Terms</td>
-                <td>{{allifquery.mode}}</td>
-                </tr>
-              <tr>
-                <td class="allif-fix-table-col">Posting Status</td>
-                <td>{{allifquery.status}}</td>
-                </tr>
-              
-              
-          </tbody>
-          </table>
-          </div>
-          </div>
-    
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-        
-<tr>
-  <td class="allif-fix-table-col">Description</td>
-  <td>{{allifquery.description}}</td>
-  </tr>
-<tr>
-  <td class="allif-fix-table-col">Created By</td>
-  <td>{{allifquery.owner}}</td>
-  </tr>
-
-          <tr>
-            <td class="allif-fix-table-col">Date</td>
-            <td>{{allifquery.date|date:'d/m/Y'}}</td>
-            </tr>
-          
-            <tr>
-              <td class="allif-fix-table-col">Comments</td>
-              <td>{{allifquery.comments}}</td>
-          
-          </tr> 
-        
-          </tbody>
-          </table>
-  </div>
-    </div>
-    </div><!--end of row div --->
-      
-        </div>
-
-</div><!--end....table row-->
-</div>
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
-
-<hr>
-
-<div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">Add/Edit Customer Payment Details</div>
-  <form method='POST' action=''>{% csrf_token %}
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="allif-info-tables">
-      <div class="row"><!--start of row div --->
-  <!--start of column two-->
-  <div class="col-md-4">
-    
-      <!--start of the table here-->
-      <div class="table-responsive">
-      <table class="table table-layout">
-      <tbody>
-
-      <tr>
-        <td class="allif-fix-table-col">Division</td>
-        <td>{{form.division}}</td>
-    
-        </tr>
-        
-        <tr>
-          <td class="allif-fix-table-col">Branch</td>
-          <td>{{form.branch}}</td>
-      
-          </tr>
-          <tr>
-            <td class="allif-fix-table-col">Department</td>
-            <td>{{form.department}}</td>
-        
-            </tr>
-        
-          
-              <tr>
-                <td class="allif-fix-table-col">Pay From Acccount</td>
-                <td>{{form.account}}</td>
-            
-                </tr>
-               
-        </tbody>
-        </table>
-      </div>
-        </div>
-           
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-       <!--start of the table here-->
-       <div class="allif-details-card table-responsive">
-       <table class="table table-layout">
-        <tbody>
-          
-          <tr>
-            <td class="allif-fix-table-col">Customer</td>
-            <td>{{form.customer}}</td>
-        
-            </tr>
-          <tr>
-            <td class="allif-fix-table-col">Mode of Payment</td>
-            <td>{{form.mode}}</td>
-        
-            </tr>
-           
-          <tr>
-            <td class="allif-fix-table-col">Amount</td>
-            <td>{{form.amount}}</td>
-        
-            </tr>
-          
-          </tbody>
-          </table>
-          </div>
-          </div>
-    
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-         
-          <tr>
-            <td class="allif-fix-table-col">Comments</td>
-            <td>{{form.comments}}</td>
-        
-            </tr>
-            
-            <tr>
-              <td class="allif-fix-table-col">Posting Status</td>
-              <td>{{form.status}}</td>
-          
-              </tr>
-
-            <tr>
-              <td class="allif-fix-table-col">Action</td>
-              <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
-          
-              </tr>
-          </tbody>
-          </table>
-  </div>
-    </div>
-    </div><!--end of row div --->
-      
-        </div>
-
-</div><!--end....table row-->
-</div>
-</form>
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
-
-<hr>
-
-</div>
-</div>
-  {% block scripts %}
-
+ 
   {% endblock %}
-   {% endblock %}
-   
+   {% block core-tab-col-one %}
+    <tr>
+      <td class="allif-fix-table-col-forms">Payment Name</td>
+      <td>{{form.name}}</td>
+    </tr>
+    <tr>
+      <td class="allif-fix-table-col-forms">Customer Name</td>
+      <td>{{form.customer}}</td>
+    </tr>
+    
+      <tr>
+      <td class="allif-fix-table-col-forms">Amount</td>
+      <td>{{form.amount}}</td>
+    </tr>
+        
+    {%endblock%}
+
+      {% block core-tab-col-two %}
+    <tr>
+      <td class="allif-fix-table-col-forms">Description</td>
+      <td>{{form.description}}</td>
+    </tr>
+      <tr>
+      <td class="allif-fix-table-col-forms">Pay From A/C</td>
+      <td>{{form.account}}</td>
+    </tr>
+      <tr>
+      <td class="allif-fix-table-col-forms">Mode of Payment</td>
+      <td>{{form.mode}}</td>
+    </tr>
+  {%endblock%}
+  {% block allif_sensitive_section_col_one %}
+    <tr>
+      <td class="allif-fix-table-col"> {{allifquery}}</td>
+      <td><a class="amel-table-list-identifier" href="{% allif_get_single_nav_link_url 'CustomerPayments' user_var glblslug %}">Go Back</a></td>
+    </tr>
+  {% endblock %}
+  {% block allif_sensitive_section_col_two %}
+    <tr>
+      <td class="allif-fix-table-col">Delet {{allifquery}}</td>
+      <td><a class="amel-table-list-identifier body-delete-link" href="{{ allif_contextual_action_links.DeleteCustomerPaymentConfirm.url }}">Delete {{allifquery}}</a></td>
+    </tr>
+    {% endblock %}
