--- a/allifmaalcommonapp/templates/allifmaalcommonapp/payments/suppliers/supplier-payment-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/payments/suppliers/supplier-payment-details.html
@@ -1,290 +1,85 @@
-{% extends 'allifmaalcommonapp/base/uimainbase/allifmaaluibase.html'%}
-{% load humanize %}
-{% block title %}
-{{title}}
+{% extends 'allifmaalcommonapp/ui/forms/add-form.html'%}
+
+<!-- START... below is for loading contextual dynamic tags and links... used for only contextual links -->
+{% load allif_contextual_action_tags %} {# this helps to put the links where you want and it loads them #}
+{% allif_get_contextual_actions_map allifquery user_var glblslug as allif_contextual_action_links %}
+<!--'allif_contextual_action_links' now holds the dictionary returned by the tag-->
+<!-- END.. -->
+
+{% load allif_navigation_tags %}
+ {% block add-form-header-block %}
+
+<a href="{{ allif_contextual_action_links.SupplierPaymentDetails.url }}">Payment Details</a>
+<a href="{% allif_get_single_nav_link_url 'SupplierPayments' user_var glblslug %}">Supplier Payments</a>
+<a href="{{ allif_contextual_action_links.PostSupplierPayment.url }}">Post Payment</a>
 {% endblock %}
-{% block style %}
-{%endblock%}
-{% block body %}
-<div class="allifmaal-main-container">
 
-<!--start....main headere-->
-<div class="card-header">
-
-<div class="row mt-12" ><!--start....header row-->
-
-<div class="col-md-12"><!--start....header column-->
-
-<div class="container-fluid amel-content-header">
-<div class="dropdown allifmaal-content-dropdown">
-  <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-  Actions
-  </a>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-    <div class="content-dropdown-menu">
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonEditSupplierPayment' allifquery.id user_var glblslug %}">Edit Item</a></li>
-         
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonPostSupplierPayment' allifquery.id user_var glblslug %}">Post Payment</a></li>
-
-      <li><a class="dropdown-item body-delete-link" href="{% url 'allifmaalcommonapp:commonWantToDeleteSupplierPayment' allifquery.id user_var glblslug %}">Delete Item</a></li>
-      
-   </div>
-  </ul>
-</div>
-<a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-<a href="{% url 'allifmaalcommonapp:commonSupplierPayments' user_var glblslug %}">Supplier Payments</a>
-<a href="{% url 'allifmaalcommonapp:commonQuotes' user_var glblslug %}">Quotations</a>
-
-
-</div>
-
-    </div><!--end....header column-->
-  
-  </div><!--end....header row-->
-
-</div><!--end....main headere-->
-
-  <div class="allifmaincontainer">
-<div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">{{allifquery}} Details</div>
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="allif-info-tables">
-      <div class="row"><!--start of row div --->
-  <!--start of column two-->
-  <div class="col-md-4">
-    
-      <!--start of the table here-->
-      <div class="table-responsive">
-      <table class="table table-layout">
-      <tbody>
-
-        <tr>
-          <td class="allif-fix-table-col">Company</td>
-          <td>{{allifquery.company}}</td>
-          </tr>
+   {% block core-tab-col-one %}
+    <tr>
+      <td class="allif-fix-table-col-forms">Payment Name</td>
+      <td>{{form.name}}</td>
+    </tr>
       <tr>
-        <td class="allif-fix-table-col">Division</td>
-        <td>{{allifquery.division}}</td>
-        </tr>
-      <tr>
-        <td class="allif-fix-table-col">Branch</td>
-        <td>{{allifquery.branch}}</td>
-        </tr>
-        <tr>
-          <td class="allif-fix-table-col">Department</td>
-          <td>{{allifquery.department}}</td>
-          </tr>
-            
-          <tr>
-            <td class="allif-fix-table-col">Paid A/C</td>
-            <td>{{allifquery.account}}</td>
-            </tr>
-     
-        </tbody>
-        </table>
-      </div>
-        </div>
-           
+      <td class="allif-fix-table-col-forms">Supplier</td>
+      <td>{{form.supplier}}</td>
+    </tr>
     
-     <!--start of column two-->
-     <div class="col-md-4">
-       <!--start of the table here-->
-       <div class="allif-details-card table-responsive">
-       <table class="table table-layout">
-        <tbody>
-          <tr>
-            <td class="allif-fix-table-col">Supplier</td>
-            <td>{{allifquery.supplier}}</td>
-            </tr>
-            <tr>
-              <td class="allif-fix-table-col">Amount</td>
-              <td>{{allifquery.amount|floatformat:2|intcomma}}</td>
-              </tr>
-              <tr>
-                <td class="allif-fix-table-col">Terms</td>
-                <td>{{allifquery.mode}}</td>
-                </tr>
-              <tr>
-                <td class="allif-fix-table-col">Posting Status</td>
-                <td>{{allifquery.status}}</td>
-                </tr>
-              
-              
-          </tbody>
-          </table>
-          </div>
-          </div>
-    
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-        
-<tr>
-  <td class="allif-fix-table-col">Description</td>
-  <td>{{allifquery.description}}</td>
-  </tr>
-<tr>
-  <td class="allif-fix-table-col">Created By</td>
-  <td>{{allifquery.owner}}</td>
-  </tr>
-
-          <tr>
-            <td class="allif-fix-table-col">Date</td>
-            <td>{{allifquery.date|date:'d/m/Y'}}</td>
-            </tr>
-          
-            <tr>
-              <td class="allif-fix-table-col">Comments</td>
-              <td>{{allifquery.comments}}</td>
-          
-          </tr> 
-        
-          </tbody>
-          </table>
-  </div>
-    </div>
-    </div><!--end of row div --->
-      
-        </div>
-
-</div><!--end....table row-->
-</div>
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
-
-<hr>
-
-<div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">Add/Edit Supplier Payment Details</div>
-  <form method='POST' action=''>{% csrf_token %}
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="allif-info-tables">
-      <div class="row"><!--start of row div --->
-  <!--start of column two-->
-  <div class="col-md-4">
-    
-      <!--start of the table here-->
-      <div class="table-responsive">
-      <table class="table table-layout">
-      <tbody>
-
-      <tr>
-        <td class="allif-fix-table-col">Division</td>
-        <td>{{form.division}}</td>
-    
-        </tr>
-        
-        <tr>
-          <td class="allif-fix-table-col">Branch</td>
-          <td>{{form.branch}}</td>
-      
-          </tr>
-          <tr>
-            <td class="allif-fix-table-col">Department</td>
-            <td>{{form.department}}</td>
-        
-            </tr>
-          <tr>
-            <td class="allif-fix-table-col">Supplier</td>
-            <td>{{form.supplier}}</td>
-        
-            </tr>
-          
-              <tr>
-                <td class="allif-fix-table-col">Pay From Acccount</td>
-                <td>{{form.account}}</td>
-            
-                </tr>
-               
-        </tbody>
-        </table>
-      </div>
-        </div>
-           
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-       <!--start of the table here-->
-       <div class="allif-details-card table-responsive">
-       <table class="table table-layout">
-        <tbody>
-          
-          <tr>
-            <td class="allif-fix-table-col">Description</td>
-            <td>{{form.description}}</td>
-        
-            </tr>
-           
-          <tr>
-            <td class="allif-fix-table-col">Mode of Payment</td>
-            <td>{{form.mode}}</td>
-        
-            </tr>
-           
-          <tr>
-            <td class="allif-fix-table-col">Amount</td>
-            <td>{{form.amount}}</td>
-        
-            </tr>
-          
-          </tbody>
-          </table>
-          </div>
-          </div>
-    
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-         
-          <tr>
-            <td class="allif-fix-table-col">Comments</td>
-            <td>{{form.comments}}</td>
-        
-            </tr>
-            
-            <tr>
-              <td class="allif-fix-table-col">Posting Status</td>
-              <td>{{form.status}}</td>
-          
-              </tr>
-
-            <tr>
-              <td class="allif-fix-table-col">Action</td>
-              <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
-          
-              </tr>
-          </tbody>
-          </table>
-  </div>
-    </div>
-    </div><!--end of row div --->
-      
-        </div>
-
-</div><!--end....table row-->
-</div>
-</form>
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
-
-<hr>
-
-</div>
-</div>
-  {% block scripts %}
-
-  {% endblock %}
-   {% endblock %}
    
+    {%endblock%}
+
+    {% block core-tab-col-two %}
+    
+     <tr>
+        <td class="allif-fix-table-col-forms">Payment Description</td>
+        <td>{{form.description}}</td>
+      </tr>
+
+     <tr>
+      <td class="allif-fix-table-col-forms">Amount</td>
+      <td>{{form.amount}}</td>
+    </tr>
+
+    {%endblock%}
+
+     {% block standard-tab-col-one %}
+    
+     <tr>
+      <td class="allif-fix-table-col-forms">Quantity</td>
+      <td>{{form.quantity}}</td>
+    </tr>
+    
+    <tr>
+      <td class="allif-fix-table-col-forms">Pay from A/C</td>
+      <td>{{form.account}}</td>
+    </tr>
+
+   
+    {%endblock%}
+       
+   {% block standard-tab-col-two %}
+     <tr>
+      <td class="allif-fix-table-col-forms">Payment Mode</td>
+      <td>{{form.mode}}</td>
+    </tr>
+
+     <tr>
+      <td class="allif-fix-table-col-forms">Balance</td>
+      <td>{{form.balance}}</td>
+    </tr>
+       
+    {%endblock%}
+
+
+  {% block allif_sensitive_section_col_one %}
+    <tr>
+      <td class="allif-fix-table-col"> {{allifquery}}</td>
+      <td><a class="amel-table-list-identifier" href="{% allif_get_single_nav_link_url 'SupplierPayments' user_var glblslug %}">Go Back</a></td>
+    </tr>
+  {% endblock %}
+  {% block allif_sensitive_section_col_two %}
+    <tr>
+      <td class="allif-fix-table-col">Delet {{allifquery}}</td>
+      <td><a class="amel-table-list-identifier body-delete-link" href="{{ allif_contextual_action_links.DeleteSupplierPaymentConfirm.url }}">Delete {{allifquery}}</a></td>
+    </tr>
+    
+    {% endblock %}
