--- a/allifmaalcommonapp/templates/allifmaalcommonapp/statements/customers/customer-statements.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/statements/customers/customer-statements.html
@@ -1,209 +1,56 @@
-{% extends 'allifmaalcommonapp/base/uimainbase/allifmaaluibase.html'%}
-{% load humanize %}
-{% block title %}
-{{title}}
-{% endblock %}
-{% block style %}
-{%endblock%}
-{% block body %}
-<div class="allifmaal-main-container">
-<!--start....main headere-->
-<div class="card-header">
-
-  <div class="row mt-12" ><!--start....header row-->
+  {% extends 'allifmaalcommonapp/ui/tables/full/data-list.html'%}
+  {% load humanize %}
+  {% load allif_navigation_tags %}
+  {% block allif-basic-search-action %}
+    {% url 'allifmaalcommonapp:commonSupplierPaymentSearch' user_var glblslug %}
+  {% endblock %}
+ 
+  {% block advanced-search-action %}
+    {% url 'allifmaalcommonapp:commonSupplierPaymentAdvanceSearch' user_var glblslug %}
+  {% endblock %}
+  {% block upload-excel-file-action %}
   
-  <div class="col-md-12"><!--start....header column-->
+  {% endblock %}
+  {% block allif-header-links %}
   
-  <div class="container-fluid amel-content-header">
-    <div class="dropdown allifmaal-content-dropdown">
-      <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-      Open Filters
-      </a>
-      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-        <div class="content-dropdown-menu">
-  
-        <li><a class="dropdown-item">Looking for something?</a></li>
-        <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonExpenses' user_var glblslug %}">Clear Search</a></li>
-       
-        <form method='POST' action="{% url 'allifmaalcommonapp:commonExpenseSearch' user_var glblslug %}">{% csrf_token %}
-        
-          <input type="text" id="allifsearchcommonfield" name="allifsearchcommonfieldname" class="form-control allifsearchcommonfieldclasstwo"
-          placeholder="Type Here ...">
-        
-          <button type="submit" class="btn allifmaal-submit-btn">Submit</button>
-          </form>
-        
-      
-      </div>
-      </ul>
-    </div>
-    <a class="amel-table-list-identifier">Expenses:</a>
-    <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-
-    <a href="{% url 'allifmaalcommonapp:commonForms' user_var glblslug %}">Forms</a>
-    <a href="{% url 'allifmaalcommonapp:commonAddExpense' user_var glblslug %}">Add New</a>
-
-
-  <div class="dropdown allifmaal-content-dropdown">
+<div class="dropdown allifmaal-content-dropdown">
     <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-    Modules
+    Navigate
     </a>
     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
       <div class="content-dropdown-menu">
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}" >Suppliers</a></li>
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonhrm' user_var glblslug %}" >Employees</a></li>
-     
+        <li><a class="dropdown-item" href="{% allif_get_single_nav_link_url 'SupplierPayments' user_var glblslug %}">Supplier Payments</a></li>
+         <li><a class="dropdown-item" href="{% allif_get_single_nav_link_url 'DirectSupplierPayment' user_var glblslug %}">Direct Supplier Payment</a></li>
+    
+        <li><a class="dropdown-item" href="{% allif_get_single_nav_link_url 'PostedSupplierPayments' user_var glblslug %}">Posted Supplier Payments</a></li>
+        <li><a class="dropdown-item" href="{% allif_get_single_nav_link_url 'CustomerPayments' user_var glblslug %}">Customer Payments</a></li>
+        <li><a class="dropdown-item" href="{% allif_get_single_nav_link_url 'PostedSupplierPayments' user_var glblslug %}">Posted Customer Payments</a></li>
+    
     </div>
     </ul>
   </div>
-  <a href="{% url 'allifmaalcommonapp:commonTasks' user_var glblslug %}">Tasks</a>
-  </div>
-  
-      </div><!--end....header column-->
-    
-    </div><!--end....header row-->
-  
-  </div><!--end....main headere-->
-<div class="allifmaincontainer">
-<div class="row mt-12"> <!--start....table row-->
-  <div class="col-md-12"> <!--start....table column-->
-    <div class="allif-scroll-table">
-      <div class="table-responsive allif-full-table">
-      <table class="table table-layout">
-        <thead>
-          <tr class="allif-table-header-row">
-          <td class="allif-fix-table-col">Expense</td>
-          
-          <td>Supplier</td>
-          <td>Quantity</td>
-          <td>Amount</td>
-          
-          <td>Posting</td>
-       
-          <td>Navigate</td>
-          
-          <td> . . . </td>
-          <td></td>
-          </tr>
-          </thead>
-          <tbody class="allif-table-body">
-           
-          
-          {% for item in allifqueryset %} 
-          <tr data-id="{{item.id}}">
-          <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonExpenseDetails' item.id user_var glblslug %}">{{item.description}}</a></td>
-         
-            <td>
-            {{item.supplier}}
-           </td>
-           <td>
-            {{item.quantity|floatformat:2|intcomma}}
-           </td>
-           <td>
-            {{item.amount|floatformat:2|intcomma}}
-           </td>
-          
-             {% if item.status == 'waiting' %}
-             <td class="allif-table-links">
-             <div class="allif-bringout">
-             {{item.status}}
-             </div>
-             </td>
-             {% else %}
-             <td>
-               {{item.status}}
-             </td>
-             {% endif %}
-           <td>
-            <div class="dropdown allifmaal-content-dropdown">
-              <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
-              <div class="dropdown-content">
-                <a href="{% url 'allifmaalcommonapp:commonEditExpense' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
-                <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
-                
-              </div>
-            </div>
-            <div class="dropdown allif-confirm-action">
-              
-              <a href="{% url 'allifmaalcommonapp:commonExpenses' user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
-              <a href="{% url 'allifmaalcommonapp:commonDeleteExpense' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
-            </div>
-  
-           
-          </td>
-         <td> . . . </td>
-         <td></td>
-        
-    
-      </tr>
-      {% endfor %}
-      {% if searched_data %}
-      {% for item in searched_data %}
-      <tr data-id="{{item.id}}">
-        <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonExpenseDetails' item.id user_var glblslug %}">{{item.description}}</a></td>
-       
-          <td>
-          {{item.supplier}}
-         </td>
-         <td>
-          {{item.quantity|floatformat:2|intcomma}}
-         </td>
-         <td>
-          {{item.amount|floatformat:2|intcomma}}
-         </td>
-        
-           {% if item.status == 'waiting' %}
-           <td class="allif-table-links">
-           <div class="allif-bringout">
-           {{item.status}}
-           </div>
-           </td>
-           {% else %}
-           <td>
-             {{item.status}}
-           </td>
-           {% endif %}
-         <td>
-          <div class="dropdown allifmaal-content-dropdown">
-            <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
-            <div class="dropdown-content">
-              <a href="{% url 'allifmaalcommonapp:commonEditExpense' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
-              <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
-              
-            </div>
-          </div>
-          <div class="dropdown allif-confirm-action">
-            
-            <a href="{% url 'allifmaalcommonapp:commonExpenses' user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
-            <a href="{% url 'allifmaalcommonapp:commonDeleteExpense' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
-          </div>
 
-         
-        </td>
-       <td> . . . </td>
-       <td></td>
-      
-  
-    </tr>
-      {% endfor %}
-        {%endif %}
-  
-        </tbody>
-      </table>
-      </div>
-     </div>
-
-      
-      </div><!--end....table column-->
-  </div>
-
-</div><!--end....table row-->
-
-</div><!--end of main container of the page....-->
-
-  {% block scripts %}
-  <!--when you put the js code here, it gives a repetitive results....-->
   {% endblock %}
-  
-   {% endblock %}
+  {% block upload-excel-file %}
+  {%endblock%}
+  {% block list-table-headers %}
+  <td class="allif-fix-table-col">Description</td>
+   <td class="allif-table-header-td">Supplier</td>
+  <td class="allif-table-header-td">Amount</td>
+  <td class="allif-table-header-td">Date</td>
    
+  {% endblock %}
+  {% block list-table-content-seciton %}
+  <td class="allif-fix-table-col">{% block list-table-content-seciton-links %}<a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonSupplierPaymentDetails' item.id user_var glblslug %}"> {{item.description}} </a>{%endblock%}</td>
+  
+  <td class="allif-table-content-td"> {{item.supplier}} </td>
+  <td class="allif-table-content-td">
+    <a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonSupplierPaymentDetails' item.id user_var glblslug %}">
+     {{item.amount|floatformat:2|intcomma}}</a>
+     </td>
+  <td class="allif-table-content-td"> {{item.date|date:'d/m/Y'}} </td>
+  {% endblock %}
+  {% block list-table-content-seciton-dropdown-links %}
+  <a href="{% url 'allifmaalcommonapp:commonSupplierPaymentDetails' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">More Details</a>
+  
+  {% endblock %}
