--- a/allifmaalcommonapp/templates/allifmaalcommonapp/suppliers/supplier-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/suppliers/supplier-details.html
@@ -6,7 +6,8 @@
 <a href="{% allif_get_single_nav_link_url 'AddSupplier' user_var glblslug %}">Add New Supplier</a>
 
  <a href="{{ allif_contextual_action_links.SupplierLedgerEntries.url }}">Ledger Entries</a>
- 
+ <a href="{{ allif_contextual_action_links.PaySupplier.url }}">Process Payment</a>
+ <a href="{{ allif_contextual_action_links.SupplierPaymentPdf.url }}">Download Statement</a>
   {%endblock%}
 
   {% block details-table-col-one %}
